Corrected the issue with items not showing with no category...

--- a/src/main/java/com/pasadya/assets/css/main.css
+++ b/src/main/java/com/pasadya/assets/css/main.css
@@ -14,6 +14,7 @@
 
 .mainPageLogo {
 	position: absolute;
+	z-index: 0;
 	margin-top: -80px;
 }
 
@@ -442,6 +443,7 @@ input[type=submit] {
 	margin-left: 90%;
 	position: static;
 	margin-top: -20px;
+	z-index: 2;
 }
 
 .accountPanel {
